@@ -4016,6 +4016,9 @@ void Mob::BuffFadeBySlot(int slot, bool iRecalcBonuses)
 		if (!found_numhits)
 			Numhits(false);
 	}
+	
+	if (spells[buffs[slot].spellid].NimbusEffect > 0)
+		RemoveNimbusEffect(spells[buffs[slot].spellid].NimbusEffect);
 
 	buffs[slot].spellid = SPELL_UNKNOWN;
 	if(IsPet() && GetOwner() && GetOwner()->IsClient()) {
